--- a/src/main/webapp/page/login/style.css
+++ b/src/main/webapp/page/login/style.css
@@ -3,6 +3,24 @@ body {
 	line-height: 1.5;
 }
 
+#locale{
+	float: right;
+}
+#locale button {
+	font-size: 14px;
+	background: none;
+	outline: none;
+	border: none;
+	line-height: 20px;
+	padding: 2px 10px;
+	border-radius: 6px;
+	transition: all 0.4s;
+	color: #0366d6;
+}
+#locale button:hover {
+	background-color: #0366d6;
+	color: white;
+}
 .header {
 	padding: 32px 0;
 	width: 65px;
