--- a/src/main/webapp/page/login/style.css
+++ b/src/main/webapp/page/login/style.css
@@ -19,6 +19,10 @@ body {
 	box-sizing: border-box;
 }
 
+#password,#id,#permissionType {
+	transition: all 0.1s;
+}
+
 #locale button:hover {
 	background-color: rgba(3,102,204,.3);
 }
